@@ -832,13 +832,40 @@ name|update
 argument_list|)
 expr_stmt|;
 block|}
-elseif|else
+else|else
+block|{
 if|if
 condition|(
 name|v
-operator|!=
+operator|==
 literal|null
 condition|)
+block|{
+name|XML
+operator|.
+name|writeXML
+argument_list|(
+name|writer
+argument_list|,
+literal|"field"
+argument_list|,
+literal|null
+argument_list|,
+literal|"name"
+argument_list|,
+name|name
+argument_list|,
+literal|"update"
+argument_list|,
+name|update
+argument_list|,
+literal|"null"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+else|else
 block|{
 name|XML
 operator|.
@@ -862,6 +889,7 @@ argument_list|,
 name|update
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 block|}
