@@ -56,6 +56,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Collection
 import|;
 end_import
@@ -125,6 +135,20 @@ operator|.
 name|collect
 operator|.
 name|Lists
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|collect
+operator|.
+name|Maps
 import|;
 end_import
 
@@ -9512,7 +9536,7 @@ name|put
 argument_list|(
 literal|"set"
 argument_list|,
-name|Lists
+name|Arrays
 operator|.
 name|asList
 argument_list|(
@@ -9520,12 +9544,7 @@ literal|"first"
 argument_list|,
 literal|"second"
 argument_list|,
-operator|new
-name|String
-index|[]
-block|{
 literal|"third"
-block|}
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -9639,18 +9658,13 @@ name|put
 argument_list|(
 literal|"add"
 argument_list|,
-name|Lists
+name|Arrays
 operator|.
 name|asList
 argument_list|(
 literal|"fourth"
 argument_list|,
-operator|new
-name|String
-index|[]
-block|{
 literal|"fifth"
-block|}
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -9732,6 +9746,195 @@ name|values
 operator|.
 name|size
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testSetNullUpdates
+specifier|public
+name|void
+name|testSetNullUpdates
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrServer
+name|solrServer
+init|=
+name|getSolrServer
+argument_list|()
+decl_stmt|;
+name|SolrInputDocument
+name|doc
+init|=
+operator|new
+name|SolrInputDocument
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|addField
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"testSetNullUpdates"
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|addField
+argument_list|(
+literal|"single_s"
+argument_list|,
+literal|"test-value"
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|addField
+argument_list|(
+literal|"multi_ss"
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"first"
+argument_list|,
+literal|"second"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|solrServer
+operator|.
+name|add
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|solrServer
+operator|.
+name|commit
+argument_list|(
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|removeField
+argument_list|(
+literal|"single_s"
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|removeField
+argument_list|(
+literal|"multi_ss"
+argument_list|)
+expr_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|map
+init|=
+name|Maps
+operator|.
+name|newHashMap
+argument_list|()
+decl_stmt|;
+name|map
+operator|.
+name|put
+argument_list|(
+literal|"set"
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|addField
+argument_list|(
+literal|"multi_ss"
+argument_list|,
+name|map
+argument_list|)
+expr_stmt|;
+name|solrServer
+operator|.
+name|add
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|solrServer
+operator|.
+name|commit
+argument_list|(
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|QueryResponse
+name|response
+init|=
+name|solrServer
+operator|.
+name|query
+argument_list|(
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"id:testSetNullUpdates"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+literal|"Entire doc was replaced because null update was not written"
+argument_list|,
+name|response
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"single_s"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+literal|"Null update failed. Value still exists in document"
+argument_list|,
+name|response
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"multi_ss"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
